Add common interfaces and errorHandler
Move /sales logic into its own folder

Add model folder. Will contain all domain objects.
